--- a/ders4_dom/örnek1_selector/index.html
+++ b/ders4_dom/örnek1_selector/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SELECTOR</title>
 </head>
 
-<body></body>
+<body>
+    <section>
+        <h1 class="H1">DOM selector</h1>
+        <img src="img/js_logo.png" class="bir" alt="naber" />
+        <br />
+        <img src="img/logo2.png" class="iki" alt="napıosun" />
+        <p id="para">
+            Javascript ÇOK KOLAY
+            <a href="https://tr.wikipedia.org/wiki/JavaScript">Javascri̇pt</a>
+        </p>
+        <button id="btn">Tıkla</button>
+    </section>
+    <script src="app.js"></script>
+</body>
 
 </html>
