--- a/ders4_dom/örnek1_selector/index.html
+++ b/ders4_dom/örnek1_selector/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SELECTOR</title>
+    <title class="arama">SELECTOR</title>
 </head>
 
-<body>
+<body id="govde">
     <section>
-        <h1 class="H1">DOM selector</h1>
+        <h1 class="h1">DOM selctor</h1>
         <img src="img/js_logo.png" class="bir" alt="naber" />
         <br />
-        <img src="img/logo2.png" class="iki" alt="napıosun" />
+        <img src="img/logo2.png" class="iki" alt="napiyon" />
         <p id="para">
-            Javascript ÇOK KOLAY
-            <a href="https://tr.wikipedia.org/wiki/JavaScript">Javascri̇pt</a>
+            javascript cok kolay
+            <a href="https://tr.wikipedia.org/wiki/JavaScript">javascript</a>
         </p>
-        <button id="btn">Tıkla</button>
+        <button id="btn">Tikla</button>
     </section>
     <script src="app.js"></script>
 </body>
