--- a/ders6_nesneler/tvShow/index.html
+++ b/ders6_nesneler/tvShow/index.html
@@ -1,15 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href=“https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css” rel=“stylesheet” />
-</head>
+    <!-- Bootstrap kutuphanesini harici bagladik -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
+    <div class="card bg-warning">
+      <h1 class="text-center pt-5">TV SHOWS</h1>
+      <input class="form-control search mb-4" type="text" />
+      <!-- ?Bu input elemanına form-control sınıfını atayarak Bootstrap 'ın modern görünümünü elde etmiş oluyoruz. Eğer form-control sınıfını atamazsak html 'de varsayılan klasik bir alan girişi oluşturulacaktır. -->
+    </div>
+    <!-- g-sayi sutunlarin uzunlugunu belirliyor -->
+    <div class="liste row p-5 g-5"></div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
